kubernetes/istio/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: propertystake-gateway
  namespace: propertystake
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 2000
        name: http
        protocol: HTTP
      hosts:
        - "*"
