kubernetes/istio/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt
  namespace: propertystake
spec:
  selector:
    matchLabels:
      app: propertystake
  action: ALLOW
  rules:
    - from:
        - source:
            requestPrincipals: ["*"]
